Adding preview movie info, adding age rating filter
